feat(Docker): Add Dockerfile